# unimrcp-websocket

./: .gitignore  AUTHORS  CHANGES  CMakeLists.txt  NOTICE  README  README.md  README_CN.md  WSL_BUILD_DEPLOY_GUIDE.md  configure.ac  unimrcp-2010.sln  unimrcp.sln
cmake/: FindAPR.cmake  FindAPRUtil.cmake  FindSofia.cmake
conf/: logfile.xml  logger.xml  unimrcpclient.xml  unimrcpserver.xml  unimrcpserver.xsd
conf/client-profiles/: lumenvox.xml  nuance.xml  speechpro.xml  unimrcp.xml
conf/umc-scenarios/: README  dtmfrecognizer.xml  recognizer.xml  recogparams.xml  recorder.xml  synthesizer.xml  verifier.xml
data/: params_default.txt
docs/: INTEGRATION_GUIDE.md  PLUGIN_COMPLIANCE_REPORT.md  PLUGIN_DEVELOPMENT_GUIDE.md  UNIMRCP_GUIDE.md  WEBSOCKET_API.md  WEBSOCKET_PLUGIN_EVALUATION.md  doxygen.conf.in  mainpage.docs
examples/: README.md
examples/go/: README.md  go.mod  main.go
examples/java/: README.md  pom.xml
examples/java/src/: WebSocketServer.java
examples/nodejs/: README.md  package.json  websocket_server.js
examples/python/: README.md  test_client.py  websocket_server.py
libs/: Makefile.am
libs/apr-toolkit/: CMakeLists.txt
libs/apr-toolkit/include/: apt.h  apt_consumer_task.h  apt_cyclic_queue.h  apt_dir_layout.h  apt_header_field.h  apt_log.h  apt_multipart_content.h  apt_net.h  apt_nlsml_doc.h  apt_obj_list.h  apt_pair.h  apt_poller_task.h  apt_pollset.h  apt_pool.h  apt_string.h  apt_string_table.h  apt_task.h  apt_task_msg.h  apt_test_suite.h  apt_text_message.h  apt_text_stream.h  apt_timer_queue.h
libs/apr-toolkit/src/: apt_consumer_task.c  apt_cyclic_queue.c  apt_dir_layout.c  apt_header_field.c  apt_log.c  apt_multipart_content.c  apt_net.c  apt_nlsml_doc.c  apt_obj_list.c  apt_pair.c  apt_poller_task.c  apt_pollset.c  apt_pool.c  apt_string_table.c  apt_task.c  apt_task_msg.c  apt_test_suite.c  apt_text_message.c  apt_text_stream.c  apt_timer_queue.c
libs/mpf/: CMakeLists.txt  mpf.vcproj  mpf.vcxproj  mpf.vcxproj.filters
libs/mpf/include/: mpf.h  mpf_activity_detector.h  mpf_audio_file_descriptor.h  mpf_audio_file_stream.h  mpf_bridge.h  mpf_buffer.h  mpf_codec.h  mpf_codec_descriptor.h  mpf_codec_manager.h  mpf_context.h  mpf_decoder.h  mpf_dtmf_detector.h  mpf_dtmf_generator.h  mpf_encoder.h  mpf_engine.h  mpf_engine_factory.h  mpf_file_termination_factory.h  mpf_frame.h  mpf_frame_buffer.h  mpf_jitter_buffer.h  mpf_message.h  mpf_mixer.h  mpf_multiplier.h  mpf_named_event.h  mpf_object.h  mpf_resampler.h  mpf_rtcp_packet.h  mpf_rtp_attribs.h  mpf_rtp_defs.h  mpf_rtp_descriptor.h  mpf_rtp_header.h  mpf_rtp_pt.h  mpf_rtp_stat.h  mpf_rtp_stream.h  mpf_rtp_termination_factory.h  mpf_scheduler.h  mpf_stream.h  mpf_stream_descriptor.h  mpf_termination.h  mpf_termination_factory.h  (+1 more)
libs/mpf/src/: mpf_activity_detector.c  mpf_audio_file_stream.c  mpf_bridge.c  mpf_buffer.c  mpf_codec_amr.c  mpf_codec_descriptor.c  mpf_codec_g711.c  mpf_codec_g722.c  mpf_codec_linear.c  mpf_codec_manager.c  mpf_context.c  mpf_decoder.c  mpf_dtmf_detector.c  mpf_dtmf_generator.c  mpf_encoder.c  mpf_engine.c  mpf_engine_factory.c  mpf_file_termination_factory.c  mpf_frame_buffer.c  mpf_jitter_buffer.c  mpf_mixer.c  mpf_multiplier.c  mpf_named_event.c  mpf_resampler.c  mpf_rtp_attribs.c  mpf_rtp_stream.c  mpf_rtp_termination_factory.c  mpf_scheduler.c  mpf_stream.c  mpf_termination.c  mpf_termination_factory.c
libs/mrcp/: CMakeLists.txt  mrcp.vcxproj
libs/mrcp-client/: CMakeLists.txt  mrcpclient.vcxproj
libs/mrcp-client/include/: mrcp_application.h  mrcp_client.h  mrcp_client_session.h  mrcp_client_types.h
libs/mrcp-client/src/: mrcp_application.c  mrcp_client.c  mrcp_client_session.c
libs/mrcp-engine/: CMakeLists.txt
libs/mrcp-engine/include/: mrcp_engine_factory.h  mrcp_engine_iface.h  mrcp_engine_impl.h  mrcp_engine_loader.h  mrcp_engine_plugin.h  mrcp_engine_types.h  mrcp_recog_engine.h  mrcp_recog_state_machine.h  mrcp_recorder_engine.h  (+7 more)
libs/mrcp-server/: CMakeLists.txt  mrcpserver.vcxproj
libs/mrcp-signaling/: CMakeLists.txt
libs/mrcpv2-transport/: CMakeLists.txt
libs/uni-rtsp/: CMakeLists.txt  unirtsp.vcxproj
libs/websocket-client/: CMakeLists.txt  Makefile.am
libs/websocket-client/include/: ws_client.h
libs/websocket-client/src/: ws_client.c
modules/mrcp-sofiasip/: CMakeLists.txt  mrcpsofiasip.vcproj  mrcpsofiasip.vcxproj  mrcpsofiasip.vcxproj.filters
modules/mrcp-unirtsp/: CMakeLists.txt  mrcpunirtsp.vcproj  mrcpunirtsp.vcxproj  mrcpunirtsp.vcxproj.filters
plugins/: Makefile.am
plugins/demo-recog/: CMakeLists.txt
plugins/demo-synth/: CMakeLists.txt
plugins/demo-verifier/: CMakeLists.txt
plugins/mrcp-recorder/: CMakeLists.txt
plugins/websocket-recog/: CMakeLists.txt  COMPILE_NOTES.md  COMPLIANCE_REPORT.md  EVALUATION.md  Makefile  Makefile.am  Makefile.in  P1_P2_COMPLETION_SUMMARY.md  P1_P2_FULL_IMPLEMENTATION.md  P1_P2_IMPLEMENTATION_SUMMARY.md  P1_P2_IMPROVEMENTS.md  PLUGIN_SPECIFICATION.md  README.md  SUMMARY.md
plugins/websocket-recog/src/: websocket_recog_engine.c  websocket_recog_engine.c.backup
plugins/websocket-synth/: CMakeLists.txt  Makefile.am  README.md
plugins/websocket-synth/src/: websocket_synth_engine.c
scripts/: README.md  install.sh  restart.sh  start.sh  status.sh  stop.sh
tests/apttest/: CMakeLists.txt
tests/mpftest/: CMakeLists.txt
tests/mrcptest/: CMakeLists.txt
tests/rtsptest/: CMakeLists.txt
tests/sipp/: mrcp_uac_discovery
tests/strtablegen/: CMakeLists.txt  stringtable.in
(+118 files in other folders)
